# tasktrail

./: .gitignore  pyproject.toml
src/tasktrail/: __main__.py  cli.py  config.py  db.py  diagnostics.py  errors.py  formatting.py  migrations.py  models.py  repository.py  services.py  timeutils.py  validation.py
src/tasktrail/commands/: _types.py  diagnose.py  init.py  project.py  task.py
