[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tasktrail"
version = "1.0.0"
description = "A teaching-quality SQLite project and task tracker"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
tasktrail = "tasktrail.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
